landing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing
  namespace: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: ghcr.io/jaennil/landing:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 32Mi
